# TestModulePOCO

./: .gitignore  CMakeLists.txt  conanfile.txt
module/: CMakeLists.txt  conanfile.txt
module/src/: EMModule.cpp  EMModule.hpp
sdk/: AbstractModule.hpp  BaseModule.cpp  BaseModule.hpp
tester/: CMakeLists.txt
tester/src/: main.cpp
